--- a/.github/workflows/sass-build.yml
+++ b/.github/workflows/sass-build.yml
@@ -26,16 +26,14 @@ jobs:
 
       - name: Build Sass
         run: npm run build:sass
-        
-      - name: Create a new commit
+              
+              
+      - name: Commit changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add dist/styles
           git commit -m 'Update compiled CSS'
-
-      - name: Push changes
-        env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: |
-          git push https://x-access-token:${GH_TOKEN}@github.com/${{ github.repository }} HEAD:main
+          git push
